--- a/trabajo-final/public/index.html
+++ b/trabajo-final/public/index.html
@@ -4,6 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name='author' content='Juan_Diego'>
+  <meta name='keywords' content='html, css,react'>
+  <meta name='description' content='Trabajo_Final'>
 	<meta name="theme-color" content="#000000">
 	<!--
       manifest.json provides metadata used when your web app is added to the
